opam-version: "1.2"
name: "tiger"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [ "Tim McGilchrist <timmcgil@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/tmcgilchrist/tiger"
dev-repo: "https://github.com/tmcgilchrist/tiger.git"
bug-reports: "https://github.com/tmcgilchrist/tiger/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel" {>= "v0.11.0" }
  "menhir" {>= "0.2.0"}
  "ounit" {test & >= "1.0.2"}
  "qcheck" {test & >= "0.8"}
  "smart-print" {>= "0.2.0"}
  "dune" {build}
]
available: [ ocaml-version >= "4.06" ]
